// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsibleComponentTest render expanded with content-class-name 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <button
      aria-expanded="true"
      class="ms-Button ms-Button--action ms-Button--command collapsible root-109"
      data-is-focusable="true"
      type="button"
    >
      <span
        class="ms-Button-flexContainer flexContainer-110"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden="true"
          class="ms-Icon root-105 ms-Button-icon icon-112"
          data-icon-name="ChevronDown"
        />
        <div>
          Some header
        </div>
      </span>
    </button>
    <div
      class="content-class-name collapsibleContent"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CollapsibleComponentTest render expanded without content-class-name 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <button
      aria-expanded="true"
      class="ms-Button ms-Button--action ms-Button--command collapsible root-109"
      data-is-focusable="true"
      type="button"
    >
      <span
        class="ms-Button-flexContainer flexContainer-110"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden="true"
          class="ms-Icon root-105 ms-Button-icon icon-112"
          data-icon-name="ChevronDown"
        />
        <div>
          Some header
        </div>
      </span>
    </button>
    <div
      class="collapsibleContent"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CollapsibleComponentTest render with container-class-name 1`] = `
<DocumentFragment>
  <div
    class="a-container"
  >
    <button
      aria-expanded="true"
      class="ms-Button ms-Button--action ms-Button--command collapsible root-109"
      data-is-focusable="true"
      type="button"
    >
      <span
        class="ms-Button-flexContainer flexContainer-110"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden="true"
          class="ms-Icon root-105 ms-Button-icon icon-112"
          data-icon-name="ChevronDown"
        />
        <div>
          Some header
        </div>
      </span>
    </button>
    <div
      class="collapsibleContent"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CollapsibleComponentTest render without container-class-name 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <button
      aria-expanded="true"
      class="ms-Button ms-Button--action ms-Button--command collapsible root-109"
      data-is-focusable="true"
      type="button"
    >
      <span
        class="ms-Button-flexContainer flexContainer-110"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden="true"
          class="ms-Icon root-105 ms-Button-icon icon-112"
          data-icon-name="ChevronDown"
        />
        <div>
          Some header
        </div>
      </span>
    </button>
    <div
      class="collapsibleContent"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CollapsibleComponentTest toggle from expanded to collapsed: collapsed 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <button
      aria-expanded="false"
      class="ms-Button ms-Button--action ms-Button--command collapsible root-109"
      data-is-focusable="true"
      type="button"
    >
      <span
        class="ms-Button-flexContainer flexContainer-110"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden="true"
          class="ms-Icon root-105 ms-Button-icon icon-112"
          data-icon-name="ChevronRight"
        />
        <div>
          Some header
        </div>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CollapsibleComponentTest toggle from expanded to collapsed: expanded 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <button
      aria-expanded="true"
      class="ms-Button ms-Button--action ms-Button--command collapsible root-109"
      data-is-focusable="true"
      type="button"
    >
      <span
        class="ms-Button-flexContainer flexContainer-110"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden="true"
          class="ms-Icon root-105 ms-Button-icon icon-112"
          data-icon-name="ChevronDown"
        />
        <div>
          Some header
        </div>
      </span>
    </button>
    <div
      class="collapsibleContent"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;
